# ripple

./: build-win.sh  产品技术方案设计.md
.github/workflows/: build.yml
ripple-app/: .gitignore  index.html  package-lock.json  package.json
ripple-app/src/: App.css  App.tsx  api.ts  index.css  types.ts
ripple-app/src-tauri/: Cargo.toml  tauri.conf.json
ripple-app/src-tauri/capabilities/: default.json
ripple-app/src-tauri/icons/: icon.icns
ripple-app/src-tauri/src/: discovery.rs  lib.rs  logging.rs  main.rs  messages.rs  websocket.rs
