[package]
name = "ripple"
version = "0.1.0"
edition = "2021"

[lib]
name = "ripple_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
tokio-tungstenite = "0.26"
mdns-sd = "0.19"
rand = "0.9"
local-ip-address = "0.6"
hostname = "0.4"
base64 = "0.22"
dirs = "6"
